Update and rename HeidiSQL 사용하기.md to 03. HeidiSQL 사용하기.md

--- a/DB/03. HeidiSQL 사용하기.md
+++ b/DB/03. HeidiSQL 사용하기.md
@@ -12,19 +12,19 @@
 
 #### 1. [시작] 메뉴에서 [HeidiSQL] 선택
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825152841472.png)
+![](../images/DB-03.png)
 
 #### 2. 이미 생성되어 있는 localhost 세션 선택(or 신규 세션 추가)
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825152911797.png)
+![](../images/DB-04.png)
 
 #### 3. 사용자 = 계정명, 암호 = 계정암호, 포트 = 3306
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825152943433.png)
+![](../images/DB-05.png)
 
 ####  4. [열기] 버튼 클릭
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825153037601.png)
+![](../images/DB-06.png)
 
 
 
@@ -36,19 +36,19 @@
 
 #### 1. window + r => sysdm.cpl 입력
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825153654613.png)
+![](../images/DB-07.png)
 
 #### 2. [시스템 속성] - [고급] - [환경변수(N)] 클릭
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825153808170.png)
+![](../images/DB-08.png)
 
 #### 3. [시스템 변수] - [Path] 선택
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825154038197.png)
+![](../images/DB-09.png)
 
 #### 4. C:\Program Files\MariaDB 10.6\bin 추가
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825154112994.png)
+![](../images/DB-10.png)
 
 
 
@@ -76,7 +76,7 @@ DESC 테이블명;
 
 *쿼리창에서 실행*
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825155245371.png)
+![](../images/DB-11.png)
 
 
 
@@ -110,4 +110,4 @@ SELECT name FROM users; /*특정 데이터 조회*/
 
 *파란 화살표를 클릭하면 실행됨<br>한 번 실행한 쿼리문은 주석처리 or 지워주지 않으면 다시 실행됨*
 
-![](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210825160253789.png)
+![](../images/DB-12.png)
