--- a/AWS/프로젝트 올리기.md
+++ b/AWS/프로젝트 올리기.md
@@ -10,9 +10,9 @@
 
 IAM을 사용하여 리소스를 사용하도록 인증 및 권한 부여된 대상을 제어.
 
-![image-20210909155100872](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909155100872.png)
+![](../images/aws01.png)
 
-![image-20210909155813074](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909155813074.png)
+![](../images/aws02.png)
 
 ###### 1. 리전이 서울인지 확인
 
@@ -20,7 +20,7 @@ IAM을 사용하여 리소스를 사용하도록 인증 및 권한 부여된 대
 
 ###### 3. 사용자 추가 클릭
 
-![image-20210909160817058](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909160817058.png)
+![](../images/aws03.png)
 
 ###### 1. 사용자 이름 : AWS 로그인시 사용하는 이름
 
@@ -30,21 +30,21 @@ IAM을 사용하여 리소스를 사용하도록 인증 및 권한 부여된 대
 
 ###### 4. 비밀번호 재설정 필요 : 해제
 
-![image-20210909162834071](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909162834071.png)
+![](../images/aws04.png)
 
 ###### * 그룹에 권한을 설정하고 유저를 추가하면, 일괄적인 관리가 가능
 
-![image-20210909163322753](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909163322753.png)
+![](../images/aws05.png)
 
 ###### * AdministratorAccess 체크 : 관리자 권한을 줌
 
-![image-20210909163627040](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909163627040.png)
+![](../images/aws06.png)
 
-![image-20210909163800508](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909163800508.png)
+![](../images/aws07.png)
 
-![image-20210909163934032](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909163934032.png)
+![](../images/aws08.png)
 
-###### ![image-20210909164542871](C:\Users\User\AppData\Roaming\Typora\typora-user-images\image-20210909164542871.png)
+###### ![](../images/aws09.png)
 
 ###### 1. 사용자의 콘솔 액세스 주소를 통해 IAM 유저로 로그인 가능
 
