Update 00 학습 스케쥴 및 목차.md

--- a/안드로이드앱/Do it! 안드로이드 앱 프로그래밍/00 학습 스케쥴 및 목차.md
+++ b/안드로이드앱/Do it! 안드로이드 앱 프로그래밍/00 학습 스케쥴 및 목차.md
@@ -1,6 +1,6 @@
 # Day01~Day05 : 뷰와 레이아웃의 특성에 대해 이해하고 대표적인 레이아웃 중심으로 학습
   ### 01. Hello! 안드로이드
-    ###### 1-1. 안드로이드 이해하기
+    1-1. 안드로이드 이해하기
     1-2. 안드로이드의 흐름 살펴보기
     2-1. 안드로이드 스튜디오 설치하기
     3-1. 첫 프로젝트 만들기
