--- a/안드로이드앱/Do it! 안드로이드 앱 프로그래밍/03 첫 번째 앱 만들기.md
+++ b/안드로이드앱/Do it! 안드로이드 앱 프로그래밍/03 첫 번째 앱 만들기.md
@@ -1,2 +1,37 @@
-#MainActivity.java
+### MainActivity.java
 
+```
+protected void onCreate(Bundle savedInstanceState) {
+  super.onCreate(savedInstanceState);
+  setContentView(R.layout.activity_main);
+}
+```
+
+1) setContentView -> 화면에 무엇을 보여줄지 결정하는 함수(메서드)
+2) R.layout.activity_main -> XML 파일의 위치, /app/res/layout/activity_main.xml
+
+```
+public void onButton1Clicked(View v) {
+  Toast.makeText(this, "확인1 버튼이 눌렸습니다.", Toast.LENGTH_LONG).show();
+}
+
+public void onButton2Clicked(View v) {
+  Intent myIntent = new Intent(Intent.ACTION_VIEW, Uri.parse("http://m.naver.com"));
+  startActivity(myIntent);
+}
+
+public void onButton2Clicked(View v) {
+  Intent myIntent = new Intent(Intent.ACTION_VIEW, Uri.parse("tel:010-1000-1000"));
+  startActivity(myIntent);
+}
+```
+
+1) Toast -> 화면에 잠깐 보였다 없어지는 메세지
+2) Intent -> 어떤 기능을 실행할 것인지 지정
+
+### activity_main.xml
+
+1) Palette-Common-Button -> Button 생성
+2) id -> 자동 생성
+3) Common Attributes-onClick -> onClick 이벤트 발생시 실행할 함수명
+4) Common Attributes-text -> 화면에 보이는 글자 변경
